<resources>
    <string name="app_name">A1</string>
    <string name="division">/</string>
    <string name="main_2">2</string>
    <string name="main_minus">-</string>
    <string name="main_6">6</string>
    <string name="main_5">5</string>
    <string name="main_4">4</string>
    <string name="main_plus">+</string>
    <string name="main_3">3</string>
    <string name="main_7">7</string>
    <string name="main_8">8</string>
    <string name="main_9">9</string>
    <string name="main_star">*</string>
    <string name="main_clear">C</string>
    <string name="main_0">0</string>
    <string name="main_equal">=</string>
    <string name="main_1">1</string>
    <string name="main_advance">advance - scientific</string>
    <string name="main_power">pow</string>
    <string name="main_percent">%</string>
    <string name="main_min">min</string>
    <string name="main_max">max</string>
    <string name="main_standard">standard</string>
</resources>